--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -20,13 +20,13 @@
     "@types/cors": "2.8.12",
     "@types/express": "4.17.14",
     "@types/express-serve-static-core": "4.17.33",
-    "@types/node": "^18.14.6",
     "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.6",
     "@types/randomstring": "1.1.8",
     "@types/validator": "13.7.11",
     "@typescript-eslint/eslint-plugin": "5.39.0",
     "@typescript-eslint/parser": "5.39.0",
-    "cross-env": "7.0.3",
+    "cross-env": "^7.0.3",
     "eslint": "8.25.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
