--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,10 +6,13 @@
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "react": "^18.2.0",
+    "react-awesome-styled-grid": "^3.1.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.5",
     "styled-components": "^5.3.8",
     "styled-react-modal": "^3.0.1",
     "ts-node": "^10.9.1"
@@ -35,6 +38,7 @@
     "jest": "^29.5.0",
     "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
