--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -13,11 +13,17 @@
     "strictPropertyInitialization": false,
     "strict": true,
     "skipLibCheck": true,
-    "isolatedModules": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "removeComments": true,
-    "noImplicitAny": true
+    "baseUrl": ".",
+    "paths": {
+      "@common/*": ["src/common/*"],
+      "@features/*": ["src/features/*"],
+      "@utils/*": ["src/utils/*"],
+      "@styles/*": ["src/styles/*"]
+    }
   },
-  "include": ["customTypes.d.ts"]
+  "include": ["src/**/*", "customTypes.d.ts"],
+  "exclude": ["node_modules"]
 }
