make integration with api

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -20,7 +20,7 @@
     "paths": {
       "@common/*": ["src/common/*"],
       "@features/*": ["src/features/*"],
-      "@utils/*": ["src/utils/*"],
+      "@helpers/*": ["src/helpers/*"],
       "@styles/*": ["src/styles/*"]
     }
   },
