--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src",
   "scripts": {
-    "start": "npm run rm:public && cross-env NODE_ENV=development ts-node --files -r tsconfig-paths/register ./src",
+    "start": "npm run rm:public && cross-env NODE_ENV=development tsnd --files -r tsconfig-paths/register ./src",
     "watch": "npm run rm:public && cross-env ts-node-dev --files --respawn --inspect -r tsconfig-paths/register ./src",
     "build": "npm run rm:public && cross-env NODE_ENV=production tsc && tsc-alias && npm run copy:files",
     "rm:public": "rm -rf ./public",
@@ -12,7 +12,8 @@
     "lint": "eslint --debug ./src",
     "lint:write": "eslint --debug ./src --fix",
     "prettier": "prettier \"**/*.+(js|jsx|json|css|md)\"",
-    "prettier:write": "prettier --write \"**/*.+(js|jsx|json|css|md)\""
+    "prettier:write": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
+    "seed": "ts-node --files -r tsconfig-paths/register ./src/bin/seeds"
   },
   "author": "",
   "license": "ISC",
@@ -34,7 +35,7 @@
     "eslint-plugin-unicorn": "44.0.2",
     "prettier": "2.7.1",
     "ts-node": "10.9.1",
-    "ts-node-dev": "2.0.0",
+    "ts-node-dev": "^2.0.0",
     "tsc-alias": "1.7.0",
     "tsconfig-paths": "4.1.0",
     "typescript": "^4.9.5"
