--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -1,29 +1,29 @@
 {
   "compilerOptions": {
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "outDir": "./dist/",
+    "noImplicitAny": true,
     "module": "es6",
     "target": "es5",
-    "outDir": "./dist/",
     "jsx": "react",
+    "lib": ["esnext", "dom"],
     "allowJs": true,
-    "moduleResolution": "Node",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "strictPropertyInitialization": false,
-    "strict": true,
-    "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
-    "removeComments": true,
-    "baseUrl": ".",
+    "forceConsistentCasingInFileNames": true, //optional
+    "strict": true, //optional
+    "skipLibCheck": true, //optional
+    "allowSyntheticDefaultImports": true, //optional
+    "resolveJsonModule": true, //optional
+    "removeComments": true, //optional
+    "baseUrl": "./",
     "paths": {
       "@common/*": ["src/common/*"],
       "@features/*": ["src/features/*"],
       "@helpers/*": ["src/helpers/*"],
       "@styles/*": ["src/styles/*"]
-    }
+    },
+    "types": ["jest", "@types/jest", "@testing-library/jest-dom", "node"]
   },
   "include": ["src/**/*", "customTypes.d.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist", "./tests/cypress", "./cypress.config.ts"]
 }
