--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js --open --hot",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "test": "jest --config=jest.config.js"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -36,6 +37,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
