--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start:api": "npm run start --workspace=api",
     "build:api": "npm run build --workspace=api",
     "start:client": "npm run start --workspace=packages/client",
-    "build:client": "npm run build --workspace=client",
-    "test": "jest --config=jest.config.js"
+    "build:client": "npm run build --workspace=packages/client",
+    "test:client": "npm run test --workspace=packages/client"
   },
   "author": "",
   "license": "ISC",
