--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,15 +4,12 @@
   "description": "",
   "main": "./src",
   "scripts": {
-    "start": "npm run rm:public && cross-env NODE_ENV=development tsnd --files -r tsconfig-paths/register ./src",
-    "watch": "npm run rm:public && cross-env ts-node-dev --files --respawn --inspect -r tsconfig-paths/register ./src",
-    "build": "npm run rm:public && cross-env NODE_ENV=production tsc && tsc-alias && npm run copy:files",
-    "rm:public": "rm -rf ./public",
-    "copy:files": "cp .env ./public/.env && cp -R ./src/templates ./public",
+    "start": "cross-env NODE_ENV=development tsnd --files -r tsconfig-paths/register ./src",
+    "watch": "cross-env ts-node-dev --files --respawn --inspect -r tsconfig-paths/register ./src",
+    "build": "cross-env NODE_ENV=production tsc && tsc-alias && npm run copy:files",
+    "copy:files": "cp .env ../../dist/.env",
     "lint": "eslint --debug ./src",
     "lint:write": "eslint --debug ./src --fix",
-    "prettier": "prettier \"**/*.+(js|jsx|json|css|md)\"",
-    "prettier:write": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
     "seed": "ts-node --files -r tsconfig-paths/register ./src/bin/seeds"
   },
   "author": "",
