--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,8 @@
     "react-awesome-styled-grid": "^3.1.4",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-favicon": "^2.0.3",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.5",
     "styled-components": "^5.3.8",
     "styled-react-modal": "^3.0.1",
@@ -27,6 +29,7 @@
     "@types/node": "^18.14.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-helmet": "^6.1.6",
     "@types/styled-components": "^5.1.26",
     "@types/styled-react-modal": "^1.2.2",
     "html-webpack-plugin": "^5.5.0",
