--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -20,7 +20,7 @@
     },
     "baseUrl": "./src",
     "rootDir": "./src",
-    "outDir": "./public",
+    "outDir": "../../dist",
     "lib": ["ESNext"],
     "types": ["node"],
     "typeRoots": ["./node_modules/@types"]
