--- a/.eslintrc
+++ b/.eslintrc
@@ -15,12 +15,7 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": [
-    "prettier",
-    "import",
-    "@typescript-eslint",
-    "unicorn"
-  ],
+  "plugins": ["prettier", "import", "@typescript-eslint", "unicorn"],
   "parser": "@typescript-eslint/parser",
   "rules": {
     "@typescript-eslint/no-explicit-any": "error",
@@ -54,7 +49,6 @@
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "never"],
-    "unicorn/filename-case": ["error",{"case": "camelCase"}],
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "error"
   },
